--- a/src/assets/html/index.html
+++ b/src/assets/html/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title></title>
   <link href="assets/fonts/saria_condensed.css" rel="stylesheet">
   <link href="assets/css/style.css" rel="stylesheet">
